--- a/ui/index.html
+++ b/ui/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -15,6 +14,7 @@
         <link media="all" type="text/css" rel="stylesheet" href="css/custom.css?v=1.3.3">
     </head>
     <body class="tooltips">
+         <h1>Welcome to Grocery Store Management System</h1>
         <div class="container">
 
             <div class="header content rows-content-header">
